--- a/src/MSetExplorer/Coords/MapCoordsControl.xaml
+++ b/src/MSetExplorer/Coords/MapCoordsControl.xaml
@@ -16,7 +16,11 @@
         <Border Grid.Row="0" Margin="10,5,10,0">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Job Id:" Height="18" />
-                <TextBlock x:Name="txtId" Margin="3,0" VerticalAlignment="Center" Text="{Binding JobId}"/>
+                <TextBox Margin="2,0,5,0" VerticalAlignment="Center" BorderThickness="0" Text="{Binding JobId}"/>
+
+                <TextBlock Text="Exp:" Height="18" />
+                <TextBlock Margin="2,0,0,0" VerticalAlignment="Center" Text="{Binding CoordsExp, StringFormat={}{0:n0}}" />
+
             </StackPanel>
         </Border>
 
