--- a/src/MSetExplorer/JobTree/JobTreeControl.xaml
+++ b/src/MSetExplorer/JobTree/JobTreeControl.xaml
@@ -35,8 +35,11 @@
                         <Style TargetType="{x:Type TreeViewItem}">
 
                             <Style.Resources>
-                                <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Cornsilk"/>
+                                <!--<SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Cornsilk"/>-->
+                                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Cornsilk"/>
+                                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="DarkSlateGray"/>
                             </Style.Resources>
+
 
                             <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
                             <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
