--- a/src/MSetExplorer/JobTree/JobTreeControl.xaml
+++ b/src/MSetExplorer/JobTree/JobTreeControl.xaml
@@ -25,21 +25,20 @@
 
                 <StackPanel Grid.Row="0" Margin="5,1" Orientation="Horizontal">
                     <TextBlock FontSize="16" Height="22">Job Tree</TextBlock>
-                    <Button Margin="25,0,10,0" Padding="5,0" Click="ButtonShowOriginal_Click" >Original</Button>
+                    <!--<Button Margin="25,0,10,0" Padding="5,0" Click="ButtonShowOriginal_Click" >Original</Button>
                     <Button Margin="10,0" Padding="5,0" Click="ButtonRollupPans_Click" >Rollup Pans</Button>
-                    <Button Margin="10,0" Padding="5,0" Click="ButtonRollupSingles_Click" >Rollup Singles</Button>
+                    <Button Margin="10,0" Padding="5,0" Click="ButtonRollupSingles_Click" >Rollup Singles</Button>-->
                 </StackPanel>
 
                 <TreeView Grid.Row="1" Margin="0" ItemsSource="{Binding JobItems}" BorderThickness="0" Focusable="True" x:Name="trvJobs" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
                     <TreeView.ItemContainerStyle>
                         <Style TargetType="{x:Type TreeViewItem}">
 
                             <Style.Resources>
-                                <!--<SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Cornsilk"/>-->
                                 <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Cornsilk"/>
                                 <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="DarkSlateGray"/>
                             </Style.Resources>
-
 
                             <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
                             <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
@@ -51,33 +50,57 @@
                             </Style.Triggers>
 
                         </Style>
-
                     </TreeView.ItemContainerStyle>
+
+                    <TreeView.CommandBindings>
+                        <CommandBinding Command="local:JobTreeCommands.MoveTo" CanExecute="MoveToCommand_CanExecute" Executed="MoveToCommand_Executed" />
+                        <CommandBinding Command="local:JobTreeCommands.RestoreBranch" CanExecute="RestoreBranchCommand_CanExecute" Executed="RestoreBranchCommand_Executed" />
+                        <CommandBinding Command="local:JobTreeCommands.Delete" CanExecute="DeleteCommand_CanExecute" Executed="DeleteCommand_Executed"/>
+                        <CommandBinding Command="local:JobTreeCommands.ShowDetails" CanExecute="ShowDetailsCommand_CanExecute" Executed="ShowDetailsCommand_Executed" />
+                    </TreeView.CommandBindings>
+                    
                     <TreeView.Resources>
                         <HierarchicalDataTemplate DataType="{x:Type mtmset:JobTreeItem}" ItemsSource="{Binding Children}">
-                            <StackPanel Orientation="Horizontal" ToolTip="{Binding Id}" KeyUp="JobTreeItem_KeyUp" Tag="{Binding Id}" >
+                            <StackPanel Orientation="Horizontal" KeyUp="JobTreeItem_KeyUp" Tag="{Binding IdAndParentId}" >
+
+                                <!--<TreeView.InputBindings>
+                                    <KeyBinding Command="local:JobTreeCommands.ShowDetails" Key="F3" />
+                                </TreeView.InputBindings>-->
+
+
+
+                                <StackPanel.ContextMenu>
+                                    <ContextMenu>
+                                        <MenuItem Header="_Move To" Command="local:JobTreeCommands.MoveTo" CommandParameter="{Binding JobId}" />
+                                        <MenuItem Header="_Restore Branch" Command="local:JobTreeCommands.RestoreBranch" CommandParameter="{Binding JobId}" />
+                                        <MenuItem Header="_Delete" Command="local:JobTreeCommands.Delete" CommandParameter="{Binding JobId}" />
+                                        <Separator/>
+                                        <MenuItem Header="_Show Details" Command="local:JobTreeCommands.ShowDetails" CommandParameter="{Binding JobId}" />
+                                    </ContextMenu>
+                                </StackPanel.ContextMenu>
+
+                                <StackPanel.ToolTip>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding IdAndParentId}"/>
+                                    </StackPanel>
+                                </StackPanel.ToolTip>
+                                
                                 <TextBlock Text="{Binding TransformType}" />
                                 
-                                <TextBlock Text="—" Foreground="BlueViolet" />
+                                <TextBlock Text=" - " Foreground="BlueViolet" />
                                 <TextBlock Text="{Binding Zoom}" Foreground="BlueViolet" />
 
-                                <TextBlock Text="—" Foreground="ForestGreen"/>
+                                <TextBlock Text=" " Foreground="ForestGreen"/>
                                 <TextBlock Text="{Binding Created}" Foreground="ForestGreen" />
 
                                 <TextBlock Text=" [" Foreground="Blue"/>
                                 <TextBlock Text="{Binding Children.Count}" Foreground="Blue" />
                                 <TextBlock Text="]" Foreground="Blue" />
 
-                                <Button Click="Button_Click" Tag="{Binding Id}" Margin="5,1,0,1" Focusable="False" >Go</Button>
+                                <Button Margin="5,1,0,1" Focusable="False" Command="local:JobTreeCommands.MoveTo" CommandParameter="{Binding JobId}" >Go</Button>
                             </StackPanel>
                         </HierarchicalDataTemplate>
 
-                        <!--<DataTemplate DataType="{x:Type mtmset:JobTreeItem}">
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="{Binding TransformType}"/>
-                                <TextBlock Text="{Binding Zoom}" Margin="10,0,0,0"/>
-                            </StackPanel>
-                        </DataTemplate>-->
                     </TreeView.Resources>
                 </TreeView>
 
