--- a/src/MSetExplorer/ColorBandSetOpenSaveDialog/ColorBandSetOpenSaveWindow.xaml
+++ b/src/MSetExplorer/ColorBandSetOpenSaveDialog/ColorBandSetOpenSaveWindow.xaml
@@ -21,8 +21,9 @@
                 <ListView.View>
                     <GridView>
                         <!--<GridViewColumn Header="Id" Width="250" DisplayMemberBinding="{Binding SerialNumber}" />-->
-                        <GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding Name}" />
+                        <GridViewColumn Header="Name" Width="130" DisplayMemberBinding="{Binding Name}" />
                         <GridViewColumn Header="Created" Width="160" DisplayMemberBinding="{Binding DateCreated}" />
+                        <GridViewColumn Header="Iterations" Width="90" DisplayMemberBinding="{Binding MaxIterations}" />
                         <GridViewColumn Header="Band Count" Width="90" DisplayMemberBinding="{Binding NumberOfBands}" />
                         <GridViewColumn Header="Description"  DisplayMemberBinding="{Binding Description}" />
                     </GridView>
