Updated JobTree to only create Alternate Branches for Zoom-type jobs. Added Confirm MessageBox if number of jobs being saved is > 3.

--- a/src/MSetExplorer/JobTree/JobTreeControl.xaml
+++ b/src/MSetExplorer/JobTree/JobTreeControl.xaml
@@ -102,6 +102,11 @@
                                 <!--<TextBlock Text=" [" Foreground="DarkGreen"/>
                                 <TextBlock Text="{Binding Children.Count}" Foreground="DarkGreen" />
                                 <TextBlock Text="]" Foreground="DarkGreen" />-->
+                                
+                                <!-- Path Head Type -->
+                                <TextBlock Text=" [" Foreground="DarkGreen"/>
+                                <TextBlock Text="{Binding PathHeadType}" Foreground="DarkGreen" />
+                                <TextBlock Text="]" Foreground="DarkGreen" />
 
                                 <Button Margin="5,1,0,1" Focusable="False" Command="local:JobTreeCommands.MoveTo" CommandParameter="{Binding JobId}" >Go</Button>
                             </StackPanel>
