--- a/src/MSetExplorer/JobTree/JobTreeControl.xaml
+++ b/src/MSetExplorer/JobTree/JobTreeControl.xaml
@@ -104,9 +104,7 @@
                                 <TextBlock Text="]" Foreground="DarkGreen" />-->
                                 
                                 <!-- Path Head Type -->
-                                <TextBlock Text=" [" Foreground="DarkGreen"/>
-                                <TextBlock Text="{Binding PathHeadType}" Foreground="DarkGreen" />
-                                <TextBlock Text="]" Foreground="DarkGreen" />
+                                <TextBlock Margin="2,1,0,1"  Text="{Binding PathHeadType}" Foreground="DarkGreen" />
 
                                 <Button Margin="5,1,0,1" Focusable="False" Command="local:JobTreeCommands.MoveTo" CommandParameter="{Binding JobId}" >Go</Button>
                             </StackPanel>
