--- a/src/MSetExplorer/JobTree/JobTreeControl.xaml
+++ b/src/MSetExplorer/JobTree/JobTreeControl.xaml
@@ -42,7 +42,7 @@
                             </Style.Resources>
 
                             <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
-                            <Setter Property="IsSelected"  Value="{Binding IsCurrent, Mode=TwoWay}" />
+                            <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
 
                             <!--<Setter Property="Background" Value="{Binding ItemColor}"/>-->
 
