On the ITree interface: changed GetItems to GetNodes and changed GetItemAndDescendants to GetNodeAndDescendants and updated these methods to return a list of Nodes instead of a list of Items.

--- a/src/MSetExplorer/JobTree/JobDeleteDialog.xaml
+++ b/src/MSetExplorer/JobTree/JobDeleteDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSetExplorer"
         mc:Ignorable="d"
-        Title="JobDeleteDialog" Height="380" Width="450">
+        Title="JobDeleteDialog" Width="470">
 
     <Grid>
 
@@ -21,31 +21,31 @@
             <StackPanel Orientation="Vertical">
 
                 <StackPanel Orientation="Horizontal">
-                    <Button Name="btnSingle" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="SingleButton_Click" TabIndex="1" IsDefault="True" >_Single</Button>
+                    <Button Name="btnSingle" HorizontalAlignment="Center" Width="120" FontSize="16" Margin="10" Click="SingleButton_Click" TabIndex="1" IsDefault="True" >_Single</Button>
                     <TextBlock Margin="10">Remove the selected job.</TextBlock>
                 </StackPanel>
 
-                <StackPanel Orientation="Horizontal">
-                    <Button Name="btnBranch" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="BranchButton_Click" IsCancel="True" TabIndex="2">_Branch</Button>
+                <StackPanel Orientation="Horizontal" x:Name="pnlBranch" >
+                    <Button Name="btnBranch" HorizontalAlignment="Center" Width="120" FontSize="16" Margin="10" Click="BranchButton_Click" IsCancel="True" TabIndex="2">_Branch</Button>
                     <TextBlock Margin="10">Remove all jobs on the current branch.</TextBlock>
                 </StackPanel>
 
-                <StackPanel Orientation="Horizontal">
-                    <Button Name="btnPreceeding" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="PreceedingButton_Click" TabIndex="3">_Precceding</Button>
+                <StackPanel Orientation="Horizontal" x:Name="pnlSiblings" >
+                    <Button Name="btnSiblings" HorizontalAlignment="Center" Width="120" FontSize="16" Margin="10" Click="SiblingsButton_Click" TabIndex="3">_Other Branches</Button>
+                    <TextBlock Margin="10" TextWrapping="Wrap" Width="300">Remove all job on each of the branches, parallel to the current branch.</TextBlock>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal" x:Name="pnlPreceeding" >
+                    <Button Name="btnPreceeding" HorizontalAlignment="Center" Width="120" FontSize="16" Margin="10" Click="PreceedingButton_Click" TabIndex="2">_Precceding</Button>
                     <TextBlock Margin="10" TextWrapping="Wrap" Width="300">Remove this and all jobs prior to this job on the current branch.</TextBlock>
                 </StackPanel>
 
-                <StackPanel Orientation="Horizontal">
-                    <Button Name="btnFollowing" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="PreceedingButton_Click" TabIndex="3">_Following</Button>
+                <StackPanel Orientation="Horizontal" x:Name="pnlFollowing" >
+                    <Button Name="btnFollowing" HorizontalAlignment="Center" Width="120" FontSize="16" Margin="10" Click="PreceedingButton_Click" TabIndex="3">_Following</Button>
                     <TextBlock Margin="10" TextWrapping="Wrap" Width="300">Remove this and all jobs after this job on the current branch.</TextBlock>
                 </StackPanel>
-                
-                <StackPanel Orientation="Horizontal">
-                    <Button Name="btnMakeRoot" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="MakeRootButton_Click" TabIndex="4">Make _Root</Button>
-                    <TextBlock Margin="10" TextWrapping="Wrap" Width="300">Remove this, all jobs on this branch prior to this job, and all other branches.</TextBlock>
-                </StackPanel>
 
-                <Button Name="btnCancel" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10,25" Click="CancelButton_Click" TabIndex="5" IsCancel="True">Cancel</Button>
+                <Button Name="btnCancel" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10,25" Click="CancelButton_Click" TabIndex="4" IsCancel="True">Cancel</Button>
 
             </StackPanel>
         </Border>
