--- a/src/MSetExplorer/JobTree/JobDeleteDialog.xaml
+++ b/src/MSetExplorer/JobTree/JobDeleteDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSetExplorer"
         mc:Ignorable="d"
-        Title="JobDeleteDialog" Width="470">
+        Title="JobDeleteDialog" Width="470" Height="280">
 
     <Grid>
 
