Updated the MapSectionGeneratorDepthFirst to save the ZValues as the Sample Point completes. Created the ZValuesSerializer class.

--- a/src/MSetExplorer/XPoc/PerformanceHarness/PerformanceHarnessMainWindow.xaml
+++ b/src/MSetExplorer/XPoc/PerformanceHarness/PerformanceHarnessMainWindow.xaml
@@ -36,6 +36,11 @@
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" >
+                <TextBlock Width="145" Margin="3" FontSize="14" Text="Discared Iterations:" />
+                <TextBox Width="150" Margin="3" VerticalAlignment="Center" Text="{Binding UnusedCalcs}"/>
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" >
                 <TextBlock Width="145" Margin="3" FontSize="14" Text="Multiplications:" />
                 <TextBox Width="150" Margin="3" VerticalAlignment="Center" Text="{Binding Multiplications}"/>
             </StackPanel>
